# testproject

./: .gitignore  LICENSE  pyproject.toml  readme.md
.github/workflows/: publish_testpypi.yml  run_unittests.yml
src/: run_tests.py  test_report.txt
src/testproject/: teststuff.py
src/testproject/tests/: __init__.py  tests.py
